Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseParty__c/LegalCaseParty__c.object-meta.xml
<CustomObject>
    <label>Legal Case Party</label>
    <pluralLabel>Legal Case Parties</pluralLabel>
    <nameField>
        <label>Legal Case Party Name</label>
        <type>AutoNumber</type>
        <displayFormat>PARTY-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>