Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseParty__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>LegalCaseParties</relationshipName>
</CustomField>