Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseParty__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Client</fullName><default>false</default><label>Client</label></value>
            <value><fullName>Proxy Contact</fullName><default>false</default><label>Proxy Contact</label></value>
            <value><fullName>Partner Org Contact</fullName><default>false</default><label>Partner Org Contact</label></value>
            <value><fullName>Opposing Counsel</fullName><default>false</default><label>Opposing Counsel</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>